# Voxelizer

./: .gitignore  CMakeLists.txt  README  README.md  Triangle.cpp  Triangle.h  V3.cpp  V3.h  Voxelizer.cpp  Voxelizer.h  example.sh  main.cpp  stdafx.cpp
test/: test.cpp
